--- a/Unit 1/notes.ipynb
+++ b/Unit 1/notes.ipynb
@@ -90,6 +90,30 @@
     "\n",
     "print(championship_contender)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3d1c2aca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Owen\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The input function\n",
+    "\n",
+    "#input(\"Enter your first name: \")\n",
+    "\n",
+    "first_name = input(\"Enter your first name: \")\n",
+    "\n",
+    "print(first_name)"
+   ]
   }
  ],
  "metadata": {
