--- a/Unit 1/notes.ipynb
+++ b/Unit 1/notes.ipynb
@@ -220,6 +220,72 @@
     "    </tr>\n",
     "</table>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6c80152",
+   "metadata": {},
+   "source": [
+    "## Initializing a Variable or Constant\n",
+    "\n",
+    "**Initializing** - The process of creating a variable and setting it to a default value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1834b7b9",
+   "metadata": {},
+   "source": [
+    "## Formatting Text for Output\n",
+    "- This process is for presenting required output in tabular format.\n",
+    "- **Field Width** - The total number of data characters additional spaces for a given datum in a formatted string\n",
+    "- **%** - format operator \n",
+    "- **%6s** - format string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bef5cca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 10000000\n",
+      "8 100000000\n",
+      "9 1000000000\n",
+      "10 10000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exponent in range(7, 11):\n",
+    "    print(exponent, 10 ** exponent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1be5b34f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "four\n",
+      "  four\n",
+      "four  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"four\")\n",
+    "print(\"%6s\" % \"four\") # Right Justify\n",
+    "print(\"%-6s\" % \"four\") # Left Justify"
+   ]
   }
  ],
  "metadata": {
