--- a/Unit 1/notes.ipynb
+++ b/Unit 1/notes.ipynb
@@ -286,6 +286,405 @@
     "print(\"%6s\" % \"four\") # Right Justify\n",
     "print(\"%-6s\" % \"four\") # Left Justify"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40903799",
+   "metadata": {},
+   "source": [
+    "## Define Iteration\n",
+    "\n",
+    "Repeating an action or process a predefined number of times. Also known as a specific type of iteration: **Definite Iteration**\n",
+    "\n",
+    "Perform an action or process until the program determines that it needs to stop: **Indefinite Iteration**\n",
+    "\n",
+    "#### Each of these iterations will use a different type of loop\n",
+    "\n",
+    "Definite Iteration --> for loop\n",
+    "Indefinite Iteration --> while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5a999253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's alive! It's alive! It's alive! It's alive! "
+     ]
+    }
+   ],
+   "source": [
+    "### Execute a statement a given number of times\n",
+    "\n",
+    "for eachPass in range(4): # Iterate through the contained code 4 times\n",
+    "    print(\"It's alive!\", end = \" \")\n",
+    "    # Each time through the loop, counting 0 - 3\n",
+    "    # print It's alive! followed by a blank space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ebf59eb",
+   "metadata": {},
+   "source": [
+    "## The structure of a for loop\n",
+    "\n",
+    "for (variable) in range(an integer expression):\n",
+    "    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;repeat any number of statements\n",
+    "\n",
+    "**loop header** - the line that starts with 'for'\n",
+    "\n",
+    "**loop body** - comprises the statements in the remaining lines of code, below the header"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cb44c89",
+   "metadata": {},
+   "source": [
+    "## Python's exponation operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "297e4ffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The variable product is currently:  1\n",
+      "2 4 8 \n",
+      "The variable product is now:  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exponent Example\n",
+    "\n",
+    "number = 2\n",
+    "exponent = 3\n",
+    "product = 1\n",
+    "\n",
+    "print(\"\\nThe variable product is currently: \", product)\n",
+    "\n",
+    "for eachPass in range(exponent):\n",
+    "    product = product * number\n",
+    "    print(product, end = \" \")\n",
+    "\n",
+    "print(\"\\nThe variable product is now: \", product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3bba9c2",
+   "metadata": {},
+   "source": [
+    "## Count-controlled loops\n",
+    "\n",
+    "**Count-controlled loops** - Loops that count through a range of numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7011fa5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 "
+     ]
+    }
+   ],
+   "source": [
+    "for count in range(4):\n",
+    "    print(count, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "83d47240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 6 24 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "product = 1 # Initializing a counter\n",
+    "\n",
+    "for count in range(4):\n",
+    "    product = product * (count + 1) # Corrects the off by 1 error\n",
+    "    print(product, end=\" \")\n",
+    "\n",
+    "print(product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "865114af",
+   "metadata": {},
+   "source": [
+    "## Loop through a range of numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "da7544bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 6 24 \n",
+      "\n",
+      " 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "product = 1\n",
+    "for count in range(1, 5): # (1, 5) - start on 1, 1 is the first number in the sequence, 5 is the first number NOT in the sequence\n",
+    "    product = product * count\n",
+    "    print(product, end=\" \")\n",
+    "\n",
+    "print(\"\\n\\n\", product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a6b5851",
+   "metadata": {},
+   "source": [
+    "### Loop head structure with lower and upper bounds\n",
+    "for (variable) in range (lower bound, upper bound + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "16eac903",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower = int(input(\"Enter the lower bound: \"))\n",
+    "upper = int(input(\"Enter the upper bound: \"))\n",
+    "\n",
+    "theSum = 0 # Notice we created theSum because sum is a Python keyword\n",
+    "\n",
+    "for number in range(lower, upper + 1):\n",
+    "    theSum = theSum + number\n",
+    "\n",
+    "print(theSum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cac262db",
+   "metadata": {},
+   "source": [
+    "## Augmented Assignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62855acb",
+   "metadata": {},
+   "source": [
+    "**Augmented Assignment** - when the assignment symbol can be conbined with the arithmetic and concatenation operators.\n",
+    "\n",
+    "Structure:\n",
+    "(variable) (operator)= (expression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "11a561f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "60\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 17\n",
+    "s = \"hi\"\n",
+    "\n",
+    "a += 3 # equivalent to a = a + 3 \n",
+    "print(a)\n",
+    "\n",
+    "a *= 3 # equivalent to a = a * 3\n",
+    "print(a)\n",
+    "\n",
+    "a %= 3 # equivalent to a = a % 3\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "81b2ba0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there! there!\n"
+     ]
+    }
+   ],
+   "source": [
+    "s += \" there!\" # equivalent to s = s + \" there\"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e101a62",
+   "metadata": {},
+   "source": [
+    "## Loop Errors: Off-by-One Error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05cf743a",
+   "metadata": {},
+   "source": [
+    "**Off-by-One Error** - These result when the programmer incorrectly specifies the upper bound for a loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "6df65d48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count from 1 through 4, we think\n",
+    "for count in range (1, 5):\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b16150",
+   "metadata": {},
+   "source": [
+    "## Traversing the Contents of a Data Sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b1a2a63b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(4)))\n",
+    "print(list(range(1,5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "356097ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 4 8 "
+     ]
+    }
+   ],
+   "source": [
+    "# Use something other than the range function in the loop head\n",
+    "for number in [6, 4, 8]:\n",
+    "    print(number, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "89424064",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H i ,   t h e r e ! "
+     ]
+    }
+   ],
+   "source": [
+    "for character in \"Hi, there!\":\n",
+    "    print(character, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e19ef4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
