--- a/Unit 1/notes.ipynb
+++ b/Unit 1/notes.ipynb
@@ -679,12 +679,217 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0e19ef4",
+   "cell_type": "markdown",
+   "id": "b2108bad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Specifying the Steps in the Range\n",
+    "\n",
+    "Another variant of the Python range() function, allows us to enter 3 values as arguments.\n",
+    "\n",
+    "range(val1, val2, val3)\n",
+    "val1 - The first value in the range, starting value\n",
+    "\n",
+    "val2 - First value NOT in the range. (val2 - 1)\n",
+    "\n",
+    "val3 - The Step Value - the interval between the numbers used in the range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "94e35a93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 3, 5]\n",
+      "[1, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(1, 6, 1))) # [1, 2, 3, 4, 5]\n",
+    "print(list(range(1, 6, 2))) # [1, 3, 5]\n",
+    "print(list(range(1, 6, 3))) # [1, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e4905994",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's suppose we want to compute a sum of the even numbers between 1 and 10.\n",
+    "theSum = 0\n",
+    "for count in range(2, 11, 2):\n",
+    "    theSum += count\n",
+    "\n",
+    "print(theSum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c651bbc3",
+   "metadata": {},
+   "source": [
+    "## Loops That Count Down\n",
+    "\n",
+    "* Until now, we have been counting up based on what our range is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e675c41b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 9 8 7 6 5 4 3 2 1 "
+     ]
+    }
+   ],
+   "source": [
+    "for count in range(10, 0, -1):\n",
+    "    print(count, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ac8d1f97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(10, 0, -1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fea5d8b",
+   "metadata": {},
+   "source": [
+    "## Back to Formatting Text for Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "925e105e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 10000000\n",
+      "8 100000000\n",
+      "9 1000000000\n",
+      "10 10000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exponent in range(7, 11):\n",
+    "    print(exponent, 10 ** exponent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eabb2ee",
+   "metadata": {},
+   "source": [
+    "### Format String and Format Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5b378812",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7      10000000\n",
+      "8     100000000\n",
+      "9    1000000000\n",
+      "10  10000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# <format string> % <datum>\n",
+    "\n",
+    "for exponent in range(7, 11):\n",
+    "    print(\"%-3d%12d\" % (exponent, 10 ** exponent))\n",
+    "    # %-3d = first column in the data output - go -3 spaces back from where the first and second column meet - content will justify right\n",
+    "    # %12d = second column in the data output will be 12 characters wide(the field width), everything in the field will justify right\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "468efc2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your salary is $100.0\n",
+      "Your salary is $ 100.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "salary = 100.00\n",
+    "print(\"Your salary is $\" + str(salary))\n",
+    "print(\"Your salary is $ %0.2f\" % (salary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0e81f6a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 3.140\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"%6.3f\" % 3.14)\n",
+    "# 6 total digits, with 3 digits after the decimal"
+   ]
   }
  ],
  "metadata": {
