--- a/Unit 1/notes.ipynb
+++ b/Unit 1/notes.ipynb
@@ -890,6 +890,357 @@
     "print(\"%6.3f\" % 3.14)\n",
     "# 6 total digits, with 3 digits after the decimal"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b9cbfe6",
+   "metadata": {},
+   "source": [
+    "## Python if and if-else statements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2780865a",
+   "metadata": {},
+   "source": [
+    "if and if-else statements are \"Branching\" statements. They allow Python to examine or test a condition. Based on the results of that test, your code translation will branch in one direction or another. Analogy: think of a fork in the road. You can go left or right.\n",
+    "\n",
+    "It is also known as a Selection Statement\n",
+    "\n",
+    "### How does Python test a conditional?\n",
+    "\n",
+    "Python uses booleans to test conditions.\n",
+    "If 2 + 3 == 5:\n",
+    "    run some code\n",
+    "else:\n",
+    "    run some other code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a965eb36",
+   "metadata": {},
+   "source": [
+    "Python will use simple comparison operators to do this:\n",
+    "\n",
+    "- == - Equals\n",
+    "- != - Not Equals\n",
+    "- < - Less Than\n",
+    "- \\> - Greater Than\n",
+    "- <= Less Than or Equal\n",
+    "- \\>= Greater Than or Equal\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "68db8e22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4 == 4)\n",
+    "print(4 == 7)\n",
+    "print(4 != 4)\n",
+    "print(4 < 5)\n",
+    "print(4 >= 3)\n",
+    "print(\"A\" < \"B\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "38a9737c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The radius is 1.4927053303604616\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python if-else Statement Example\n",
+    "import math\n",
+    "area = float(input(\"Enter the area: \"))\n",
+    "\n",
+    "if area > 0:    # if <condition>:\n",
+    "    radius = math.sqrt(area / math.pi)  # run a sequence of <statements>\n",
+    "    print(\"The radius is\", radius)\n",
+    "else:   # otherwise\n",
+    "    print(\"Error: the area must be a positive number.\") # run this sequence of <statements>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d580085b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum:  22\n",
+      "Minimum:  18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This example prints the maximum and minimum of two input numbers\n",
+    "first = int(input(\"Enter the first number: \"))\n",
+    "second = int(input(\"Enter the second number: \"))\n",
+    "\n",
+    "if first > second:\n",
+    "    maximum = first\n",
+    "    minimum = second\n",
+    "else:\n",
+    "    maximum = second\n",
+    "    minimum = first\n",
+    "\n",
+    "print(\"Maximum: \", maximum)\n",
+    "print(\"Minimum: \", minimum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a372aac",
+   "metadata": {},
+   "source": [
+    "## Python min and max functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "42e029cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum:  670\n",
+      "Minimum:  118\n"
+     ]
+    }
+   ],
+   "source": [
+    "# min() and max() will eliminate the need for if-else\n",
+    "first = int(input(\"Enter the first number: \"))\n",
+    "second = int(input(\"Enter the second number: \"))\n",
+    "print(\"Maximum: \", max(first, second))\n",
+    "print(\"Minimum: \", min(first, second))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fbd07be",
+   "metadata": {},
+   "source": [
+    "## One-way Selection Statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "20588bc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 25\n",
+    "if x < 0:\n",
+    "    x = -x\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bfd4ea0",
+   "metadata": {},
+   "source": [
+    "## Multi-way if statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "90db29f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The letter grade is:  F\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter the numeric grade: \"))\n",
+    "if number > 89:\n",
+    "    letter = 'A'\n",
+    "elif number > 79:\n",
+    "    letter = 'B'\n",
+    "elif number > 69:\n",
+    "    letter = 'C'\n",
+    "else:\n",
+    "    letter = 'F'\n",
+    "\n",
+    "print(\"The letter grade is: \", letter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ec964de",
+   "metadata": {},
+   "source": [
+    "## Logical Operators and Compound Boolean Expressions\n",
+    "\n",
+    "Often times in the course of a Python script interpretation, we may have to check to see if two or more conditional statements are true before running a sequence of code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "365e8410",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter the numeric grade: \"))\n",
+    "if number > 100:\n",
+    "    print(\"ERROR: grade must be between 100 and 0.\")\n",
+    "elif number < 0:\n",
+    "    print(\"ERROR: grade must be between 100 and 0.\")\n",
+    "else:\n",
+    "    # Run the same code as the example above\n",
+    "    print(\"Hi\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0091374e",
+   "metadata": {},
+   "source": [
+    "### Compound Boolean Expression\n",
+    "\n",
+    "Testing multiple conditions at the same time\n",
+    "\n",
+    "To do this we use ***Logical Operators***\n",
+    "- and\n",
+    "- or\n",
+    "- not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "45621dd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR\n",
+      "ERROR\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter the numeric grade: \"))\n",
+    "if number > 100 or number < 0: # Using the or logic operator \n",
+    "    print(\"ERROR\")\n",
+    "else:\n",
+    "    print(\"The code from above.\")\n",
+    "\n",
+    "if number <= 0 and number >= 100: # Using the and logic operator\n",
+    "    print(\"The code from above.\")\n",
+    "else:\n",
+    "    print(\"ERROR\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3f15374",
+   "metadata": {},
+   "source": [
+    "make tables here later"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d2ff588",
+   "metadata": {},
+   "source": [
+    "## Short-Circuit Evaluation\n",
+    "\n",
+    "Python sometimes knows the value of a boolean expression before it has evaluated all of the operands. For instance, in the expression A and B, if A is false, then so is the expression, and there is no need to evaluate b."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9e7d2cdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count = 0 or average <= 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = int(input(\"Enter the count: \"))\n",
+    "theSum = int(input(\"Enter the sum: \"))\n",
+    "if count > 0 and theSum // count > 10:\n",
+    "    print(\"average > 10\")\n",
+    "else:\n",
+    "    print(\"count = 0 or average <= 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e5e075a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
