--- a/Unit 1/notes.ipynb
+++ b/Unit 1/notes.ipynb
@@ -893,6 +893,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00a8488d",
+   "metadata": {},
+   "source": [
+    "# Start of notes for Monday 9/29"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b9cbfe6",
    "metadata": {},
    "source": [
@@ -1233,14 +1241,6 @@
     "else:\n",
     "    print(\"count = 0 or average <= 10\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e5e075a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
