--- a/Unit 1/notes.ipynb
+++ b/Unit 1/notes.ipynb
@@ -1233,6 +1233,100 @@
     "else:\n",
     "    print(\"count = 0 or average <= 10\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34fbdcf7",
+   "metadata": {},
+   "source": [
+    "## Conditional Iteration: The while Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9e4ba2fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### while Loop Structure\n",
+    "\n",
+    "# while <condition>:\n",
+    "    # <sequence of statements>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61dfa242",
+   "metadata": {},
+   "source": [
+    "## Infinite Loop\n",
+    "\n",
+    "-A loop that remains true, hence you never escape from the loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "775c9be1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is: 3603.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "set the sum to 0.0\n",
+    "input a string\n",
+    "while the string is not the empty string\n",
+    "    convert the string to a float\n",
+    "    add the float to the sum\n",
+    "    input a string\n",
+    "print the sum\n",
+    "\n",
+    "Loop Control Variable - the first input statement that initializes a variable to a value that the loop condition can test\n",
+    "'''\n",
+    "\n",
+    "theSum = 0.0\n",
+    "data = input(\"Enter a number or just enter to quit:\")\n",
+    "while data != \"\":\n",
+    "    number = float(data)\n",
+    "    theSum += number\n",
+    "    data = input(\"Enter a number or just enter to quit:\")\n",
+    "\n",
+    "print(\"The sum is:\" , theSum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6f52632",
+   "metadata": {},
+   "source": [
+    "The while loop is also called an entry-control loop, because its condition is tested at the top of the loop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330442ed",
+   "metadata": {},
+   "source": [
+    "## while True Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4d665f3",
+   "metadata": {},
+   "source": [
+    "You can simplify the while loop structure and inprove its readability by turning it into a while true loop\n",
+    "\n",
+    "When using while true, you also can implement a break statement"
+   ]
   }
  ],
  "metadata": {
